# FATEC-API-6-SEMESTRE

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
backend/: app.py  database.py  security.py  settings.py
backend/clients/: aneel.py
backend/core/: models.py  oauth_models.py  schemas.py  utils.py
backend/email/: envio_email.py
backend/models/: df_hierarchical_agg.pkl  prophet_forecasts.pkl  prophet_models.pkl
backend/routes/: auth.py  consent_policy.py  dist.py  etl.py  oauth.py  pipeline.py  tam.py  users.py  wellknown.py
backend/scripts/: pipeline_loop.py  qa-reset-cnpj.sh
backend/services/: calculate_pt_and_pnt.py  calculate_sam.py  calculo_tam.py  cnpj_enrichment.py  distribuidoras.py  oauth_server.py  pipeline_trigger.py  render_tam.py  report.py  temporal_analysis.py
backend/tasks/: celery_app.py  task_calculate_pt_pnt.py  task_calculate_sam.py  task_cleanup_files.py  task_criticidade.py  task_descompact_gdb.py  task_download_gdb.py  task_enrich_cnpj.py  task_load_dec_fec.py  task_pipeline_error.py  task_process_layers.py  task_render_criticidade.py  task_render_pt_and_pnt.py  task_render_sam.py  task_render_tam.py  task_report.py  task_tam.py  (+1 more)
codex/: task_cnpj.md  task_report.md
colabs/: Análise_Temporal_DEC_e_FEC.ipynb  Criticality_Score.ipynb  DEC.ipynb  Heatmap.ipynb  PT_And_PNT_Per_Set.ipynb  PT_And_PNT_Per_Set_Without_Graph.ipynb  SAM_Calculation.ipynb  TAM_Calculation.ipynb  notebooks_poc.md
docs/: project-structure.md
frontend/: consent.html  hello.html  login.html  politica-de-privacidade.html  profile.html  register.html  style.css
ralph/: prompt.md
(+47 files in other folders)
